[package]
name = "wasm-pre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
js-sys = "0.3"
#instant = "0.1"
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"


# [target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
[dependencies.web-sys]
web-sys = "0.3.60"
features = [
    #"AudioBuffer",
    "console",
    "Document",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "HtmlAudioElement",
    "MouseEvent",
    "KeyboardEvent",
    "Event",
    #"WebGlContextAttributes",
    "Window"
]

#[profile.release]
#opt-level = 'z'
#lto = true

